# vcd

./: AUTHORS  ChangeLog  Makefile.am  Makefile.svn  README  TODO  configure.ac  mkrelease  pathconfig.h.in
etc/: Makefile.am  procfs.unhide  vcd.conf  vservers
etc/examples/: context.conf
lib/libarchive/: Makefile.am  configure.ac
lib/libarchive/src/: Makefile.am  archive.h  archive_util.c
scripts/: Makefile.am  bootstrap-vcd.conf  bootstrap-vcd.sh  pathconfig.in  vprocunhide  vpstree  vserver  vtop  vxdb.sql
scripts/commands/: enter.sh  exec.sh  info.sh  login.sh  procfs.sh  release.sh  reload.sh  start.sh  status.sh  stop.sh
scripts/lib/: fs.sh  util.sh  vps.sh  vs.sh
scripts/test/: CoW-test.sh
src/: Makefile.am  lockfile.c  nidof.c  pathconfig.h.in  tools.h  vattr.c  vcc.c  vcd.c  vcmd.c  vconfig.c  vcontext.c  vcs.c  vdlimit.c  vexec.c  vflags.c  vinfo.c  vkill.c  vlimit.c  vlogin.c  vmount.c  vnamespace.c  vncontext.c  vnflags.c  vps.c  vrsetup.c  vsched.c  vuname.c  vwait.c  wrapper.h  xidof.c
src/commands/: Makefile.am  commands.c  commands.h  context.c  context.h  dx.c  in.c  login.c  main.c  nx.c  start.c
src/coreutils/: Makefile.am  coreutils.h  vdf.c  vdu.c  vuname.c  vwho.c
src/libconfuse/: Makefile.am  Makefile.in  confuse.c  confuse.h  lexer.c  lexer.l
src/libhttpd/: Makefile.am  api.c  httpd.h  httpd_priv.h  ip_acl.c  protocol.c
src/libinternal/: Makefile.am  bcaps-list.c  ccaps-list.c  cflags-list.c  iattr-list.c  list.c  list.h  mflags-list.c  msg.c  msg.h  nflags-list.c  printf.c  printf.h  rlimit-list.c  sched-list.c  sys_clone.c  vhi-list.c  vlist.h
src/libvc/: Makefile.am  argv.c  cfg.c  compat.c  dx.c  in.c  io.c  ix.c  list.c  lists.c  misc.c  msg.c  ns.c  nx.c  str.c  task.c  vc.h  vx.c
src/libvconfig/: Makefile.am  dummy.c  main.c  map.h  node.h  single.c  vconfig.h
src/libxmlrpc/: Makefile.am  base64.c  encodings.c  queue.c  xml_element.c  xml_element.h  xml_to_xmlrpc.c  xmlrpc.c  xmlrpc.h  xmlrpc_introspection.c  xmlrpc_introspection.h  xmlrpc_private.h
src/procps/: Makefile.am  procps.h  vfuser.c  vkillall.c  vpgrep.c  vpkill.c  vpmap.c  vps.c  vpstree.c  vskill.c  vsnice.c  vtop.c  vuptime.c  vw.c
src/sysvinit/: Makefile.am
src/test/: Makefile.am  cow.c  test.h
src/tools/: Makefile.am  cowcp.c  dx.c  ix.c  lists.c  lockfile.c  msg.c  nidof.c  ns.c  nx.c  tools.h  vattr.c  vconfig.c  vcontext.c  vdbm.c  vdlimit.c  vexec.c  vflags.c  vinfo.c  vkill.c  vlimit.c  vlogin.c  vmount.c  vnamespace.c  vncontext.c  vnflags.c  vps.c  vr.c  vrsetup.c  vsched.c  vserver-stat.c  vshelper.c  vuname.c  vunify.c  vwait.c  vx.c  xidof.c
src/util-linux/: Makefile.am
src/vcc/: Makefile.am  cmd.c  cmd.h  commands.h  create.c  exec.c  kill.c  list.c  load.c  login.c  main.c  msg.c  reboot.c  remove.c  rename.c  restart.c  start.c  status.c  stop.c  templates.c  vcc.conf  vcc.h  vlogin.c
src/vcc/vcc/: Makefile.am  cmd.c  cmd.h  create.c  exec.c  kill.c  limstatus.c  list.c  load.c  login.c  netstatus.c  reboot.c  remove.c  rename.c  restart.c  start.c  status.c  stop.c  templates.c
src/vcc/vcdadm/: Makefile.am  cmd.c  cmd.h  hostinfo.c  status.c  user.c  user_caps.c
src/vcc/vce/: Makefile.am  cmd.c  cmd.h  dep.c  dx_limit.c  init.c  list.c  mount.c  nx_addr.c  nx_broadcast.c  vx_bcaps.c  vx_ccaps.c  vx_cpuset.c  vx_flags.c  vx_limit.c  vx_sched.c  vx_uname.c
src/vcc/vgc/: Makefile.am  cmd.c  cmd.h  group.c  vg.c  vserver.c  vx.c  wrapper.c
src/vcd/: Makefile.am  auth.c  auth.h  cfg.c  cfg.h  collector.c  collector.h  gensql.c  lists.c  lists.h  log.c  log.h  main.c  methods.c  methods.h  server.c  server.h  stats.h  syscall-compat.c  syscall-compat.h  validate.c  validate.h  vcd.conf  vshelper.c  vshelper.conf  vxdb-tables.h  vxdb.c  vxdb.h  vxdb.sql  xid.c  xid.h
src/vcd/methods/: Makefile.am  auth.c  auth.h  commands.h  hello.c  login.c  main.c  methods.c  methods.h
src/vcd/methods/auth/: auth_adduser.c  auth_deluser.c  auth_getacl.c  auth_login.c  auth_moduser.c  auth_setacl.c  auth_userinfo.c  getacl.c  moduser.c  setacl.c
src/vcd/methods/helper/: helper_netup.c  helper_restart.c  helper_shutdown.c  helper_startup.c
src/vcd/methods/vcd/: vcd_hostinfo.c  vcd_login.c  vcd_status.c  vcd_user_caps_add.c  vcd_user_caps_get.c  vcd_user_caps_remove.c  vcd_user_get.c  vcd_user_remove.c  vcd_user_set.c
src/vcd/methods/vg/: vg_add.c  vg_del.c  vg_internal.c  vg_internal.h  vg_list.c  vg_remove.c  vg_vx_add.c  vg_vx_list.c  vg_vx_reboot.c  vg_vx_remove.c  vg_vx_restart.c  vg_vx_start.c  vg_vx_stop.c
src/vcd/methods/vx/: status.c  vx_create.c  vx_exec.c  vx_getname.c  vx_getowners.c  vx_getxid.c  vx_kill.c  vx_killer.c  vx_limstatus.c  vx_load.c  vx_netstatus.c  vx_reboot.c  vx_remove.c  vx_rename.c  vx_restart.c  vx_setowners.c  vx_start.c  vx_status.c  vx_stop.c  vx_templates.c
src/vcd/methods/vxdb/: get.c  set.c  vxdb_create.c  vxdb_dep_add.c  vxdb_dep_remove.c  vxdb_dx_limit_get.c  vxdb_dx_limit_remove.c  vxdb_dx_limit_set.c  vxdb_get.c  vxdb_getacl.c  vxdb_init_get.c  vxdb_init_method_get.c  vxdb_init_method_remove.c  vxdb_init_method_set.c  vxdb_init_mount_add.c  vxdb_init_mount_get.c  vxdb_init_mount_remove.c  vxdb_init_set.c  vxdb_list.c  vxdb_mount_get.c  vxdb_mount_remove.c  vxdb_mount_set.c  vxdb_name_get.c  vxdb_nx_addr_add.c  vxdb_nx_addr_get.c  vxdb_nx_addr_remove.c  vxdb_nx_addr_set.c  (+42 more)
src/vcdadm/: Makefile.am  cmd.c  cmd.h  main.c  status.c  user.c  user_caps.c  vcdadm.conf
src/vce/: Makefile.am  cmd.c  cmd.h  dx_limit.c  init.c  init_method.c  list.c  main.c  mount.c  msg.h  nx_addr.c  nx_broadcast.c  vx_bcaps.c  vx_ccaps.c  vx_flags.c  vx_limit.c  vx_sched.c  vx_uname.c
src/vgc/: Makefile.am  cmd.c  cmd.h  group.c  main.c  vgc.conf  vserver.c
src/vshelper/: Makefile.am  cfg.c  cfg.h  log.c  log.h  main.c  vshelper.c  vshelper.conf
src/vstatd/: Makefile.am  Makefile.in  cacct.c  cfg.c  cfg.h  collector.c  collector.h  cvirt.c  limit.c  loadavg.c  log.c  main.c  parser.c  vs_info.c  vs_limit.c  vs_loadavg.c  vs_net.c  vs_rrd.c  vs_rrd.h  vstats.h
src/vxpasswd/: Makefile.am  vxpasswd.c
(+60 files in other folders)
