## Copyright 2005 The util-vserver Developers
## See AUTHORS for details
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by  *
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the
## Free Software Foundation, Inc.,
## 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

INCLUDES = -I$(top_srcdir)

AM_LDFLAGS = -lvserver

sbin_PROGRAMS = nidof \
                vattr \
                vcontext \
                vdlimit \
                vexec \
                vflags \
                vinfo \
                vkill \
                vlimit \
                vmount \
                vnamespace \
                vncontext \
                vnflags \
                vsched \
                vuname \
                vwait \
                xidof

noinst_HEADERS = tools.h

nidof_SOURCES = nidof.c
vattr_SOURCES = vattr.c
vcontext_SOURCES = vcontext.c
vdlimit_SOURCES = vdlimit.c
vexec_SOURCES = vexec.c
vflags_SOURCES = vflags.c
vinfo_SOURCES = vinfo.c
vkill_SOURCES = vkill.c
vlimit_SOURCES = vlimit.c
vmount_SOURCES = vmount.c
vnamespace_SOURCES = vnamespace.c
vncontext_SOURCES = vncontext.c
vnflags_SOURCES = vnflags.c
vsched_SOURCES = vsched.c
vuname_SOURCES = vuname.c
vwait_SOURCES = vwait.c
xidof_SOURCES = xidof.c
