## Copyright 2006 Benedikt Böhm <hollow@gentoo.org>
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the
## Free Software Foundation, Inc.,
## 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libxmlrpc.a

noinst_HEADERS = base64.h \
                 encodings.h \
                 queue.h \
                 simplestring.h \
                 xml_element.h \
                 xml_to_xmlrpc.h \
                 xmlrpc.h \
                 xmlrpc_private.h

libxmlrpc_a_SOURCES = base64.c \
                      encodings.c \
                      queue.c \
                      simplestring.c \
                      xml_element.c \
                      xml_to_xmlrpc.c \
                      xmlrpc.c
